# rsfphate

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  PUBLISHING.md  README.md  config.yaml  environment.yml  pyproject.toml  requirements.txt  run_experiments.py  run_holdout_validation.py  verify_submission.py
examples/: 2_generador_datos_sinteticos.py  basic_usage.py  churn_preprocessing.py
notebooks/: TFG_Diego_Suarez_Maranon.docx  analisis_churn_survival.ipynb  analisis_multiproducto.ipynb  eda_datos_reales.ipynb  eda_datos_sinteticos.ipynb  quickstart.ipynb  validacion_holdout.ipynb  validacion_sintetica.ipynb
src/rsfphate/: __init__.py  datasets.py  forest.py  model.py  spectral.py
tests/: test_pipeline.py  test_smoke.py
